--- a/.github/workflows/ci-infra.yml
+++ b/.github/workflows/ci-infra.yml
@@ -49,96 +49,138 @@ jobs:
           gcloud auth configure-docker us-central1-docker.pkg.dev
 
       # ------------------------------
-      # Step 3: Conditional Pipeline Selector
+      # Step 3: Conditional Pipeline
       # ------------------------------
       - name: 3️⃣ Run CI/CD or Infra Pipeline
         shell: bash
         run: |
+          mkdir -p reports
+
           if [[ "${{ github.event.inputs.PIPELINE }}" == "ci" ]]; then
             echo "Running Application CI/CD pipeline..."
-
             # ------------------------------
             # 3.1 Trivy Filesystem Scan
             # ------------------------------
-            echo "3.1 Trivy Scan - filesystem vulnerabilities"
-            trivy fs app/
+            trivy fs --format json --output reports/trivy-fs.json app/
 
             # ------------------------------
             # 3.2 SonarQube Analysis
             # ------------------------------
-            echo "3.2 SonarQube Analysis"
             sonar-scanner \
               -Dsonar.projectKey=app \
               -Dsonar.projectName=app \
               -Dsonar.login=$SONAR_TOKEN
-
+              
             # ------------------------------
-            # 3.3 SonarQube Quality Gate Check
+            # 3.3 SonarQube Quality Gate Check + Save JSON
             # ------------------------------
-            echo "3.3 Checking SonarQube Quality Gate"
-            SONAR_STATUS=$(curl -s -u $SONAR_TOKEN: "https://sonarqube.example.com/api/qualitygates/project_status?projectKey=app" | jq -r '.projectStatus.status')
+            curl -s -u $SONAR_TOKEN: "https://sonarqube.example.com/api/qualitygates/project_status?projectKey=app" \
+              -o reports/sonarqube.json
+            SONAR_STATUS=$(jq -r '.projectStatus.status' reports/sonarqube.json)
             if [[ "$SONAR_STATUS" != "OK" ]]; then
-              echo "Quality Gate failed: $SONAR_STATUS"
+              echo "❌ SonarQube Quality Gate failed: $SONAR_STATUS"
               exit 1
             fi
-
+            
             # ------------------------------
             # 3.4 OWASP Dependency Check
             # ------------------------------
-            echo "3.4 Running OWASP Dependency Check"
-            dependency-check.sh --scan ./app --disableYarnAudit --disableNodeAudit --format XML --out reports
-
+            dependency-check.sh --scan ./app --disableYarnAudit --disableNodeAudit \
+              --format XML --out reports/dependency-check.xml
+              
             # ------------------------------
             # 3.5 Docker Build & Push
             # ------------------------------
-            echo "3.5 Build & Push Docker Image"
             docker build -t hello:latest ./app
             docker tag hello:latest us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
             docker tag hello:latest us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:latest
             docker push us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
             docker push us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:latest
-
+            
             # ------------------------------
             # 3.6 Trivy Docker Image Scan
             # ------------------------------
-            echo "3.6 Trivy Scan - Docker Image"
-            trivy image us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
-
+            trivy image --format json \
+              --output reports/trivy-image.json \
+              us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
+              
             # ------------------------------
-            # 3.7 Update Helm Chart & Push
+            # 3.7 Update Helm Chart
             # ------------------------------
-            echo "3.7 Update Helm Chart values.yaml"
             sed -i "s|image:.*|image: us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG|" helm/values.yaml
-
             git config user.email "bikram23march@gmail.com"
             git config user.name "bikram-singh"
             git add helm/values.yaml
             git commit -m "Update image to $IMAGE_TAG" || echo "No changes to commit"
             git push https://x-access-token:$GITHUB_TOKEN@github.com/bikram-singh/DevSecOps-Project-GCP-Jenkins-Terraform-Argocd-Helm-GKE-Ingress-SSL-TLS-Webhook.git main
 
+            # ------------------------------
+            # 3.8 Generate HTML Summary Report
+            # ------------------------------
+            echo "<html><head><title>CI/CD Summary</title></head><body>" > reports/summary.html
+            echo "<h1>✅ CI/CD Pipeline Report</h1>" >> reports/summary.html
+
+            # SonarQube Result
+            echo "<h2>SonarQube Quality Gate</h2>" >> reports/summary.html
+            if [[ \"$SONAR_STATUS\" == \"OK\" ]]; then
+              echo "<p style='color:green'>✅ PASSED</p>" >> reports/summary.html
+            else
+              echo "<p style='color:red'>❌ FAILED ($SONAR_STATUS)</p>" >> reports/summary.html
+            fi
+
+            # ------------------------------
+            # Trivy FS
+            # ------------------------------
+            TRIVY_FS_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-fs.json | wc -l || true)
+            echo "<h2>Trivy Filesystem Scan</h2><p>Critical Issues: $TRIVY_FS_CRIT</p>" >> reports/summary.html
+            
+            # ------------------------------
+            # Trivy Image
+            # ------------------------------
+            TRIVY_IMG_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-image.json | wc -l || true)
+            echo "<h2>Trivy Docker Image Scan</h2><p>Critical Issues: $TRIVY_IMG_CRIT</p>" >> reports/summary.html
+            
+            # ------------------------------
+            # OWASP
+            # ------------------------------
+            OWASP_CRIT=$(grep -c "CRITICAL" reports/dependency-check.xml || true)
+            echo "<h2>OWASP Dependency Check</h2><p>Critical Issues: $OWASP_CRIT</p>" >> reports/summary.html
+
+            echo "</body></html>" >> reports/summary.html
+
             echo "✅ CI/CD pipeline completed successfully."
 
           else
             echo "Running Infrastructure Pipeline..."
             cd gke-terraform
-
-            # ------------------------------
-            # 3.8 Terraform Init
-            # ------------------------------
-            echo "3.8 Terraform Init"
             terraform init
-
-            # ------------------------------
-            # 3.9 Terraform Apply / Destroy
-            # ------------------------------
             if [[ "${{ github.event.inputs.ACTION }}" == "apply" ]]; then
-              echo "3.9 Terraform Apply"
               terraform plan
               terraform apply -auto-approve
             else
-              echo "3.9 Terraform Destroy"
               terraform destroy -auto-approve
             fi
-
             echo "✅ Infra pipeline completed successfully."
           fi
+
+      # ------------------------------
+      # Step 4: Upload Reports
+      # ------------------------------
+      - name: 4️⃣ Upload Reports
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: security-reports
+          path: reports/
+
+      # ------------------------------
+      # Step 5: Attach HTML Summary to GitHub Job
+      # ------------------------------
+      - name: 5️⃣ Publish HTML Summary
+        if: always()
+        run: |
+          echo "### 📝 CI/CD Security Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Open full report: [Download Artifact](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          cat reports/summary.html >> $GITHUB_STEP_SUMMARY
