--- a/.github/workflows/ci-infra.yml
+++ b/.github/workflows/ci-infra.yml
@@ -26,7 +26,6 @@ jobs:
     env:
       IMAGE_TAG: "1.0.${{ github.run_number }}"
       GOOGLE_CLOUD_PROJECT: ${{ secrets.GCP_PROJECT }}
-      GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-key.json
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -39,19 +38,26 @@ jobs:
         uses: actions/checkout@v3
 
       # ------------------------------
-      # Step 2: Setup GCP Authentication
+      # Step 2: Authenticate to Google Cloud
       # ------------------------------
-      - name: 2️⃣ Setup GCP Credentials
+      - name: 2️⃣ Authenticate to Google Cloud
+        id: auth
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      # ------------------------------
+      # Step 3: Setup GCP Project & Docker Auth
+      # ------------------------------
+      - name: 3️⃣ Setup GCP Project & Docker Auth
         run: |
-          printf '%s' "${{ secrets.GCP_SA_KEY }}" > $GOOGLE_APPLICATION_CREDENTIALS
-          gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
           gcloud config set project $GOOGLE_CLOUD_PROJECT
           gcloud auth configure-docker us-central1-docker.pkg.dev  
 
       # ------------------------------
-      # Step 3: Conditional Pipeline
+      # Step 4: Conditional Pipeline
       # ------------------------------
-      - name: 3️⃣ Run CI/CD or Infra Pipeline
+      - name: 4️⃣ Run CI/CD or Infra Pipeline
         shell: bash
         run: |
           mkdir -p reports
@@ -59,12 +65,12 @@ jobs:
           if [[ "${{ github.event.inputs.PIPELINE }}" == "ci" ]]; then
             echo "Running Application CI/CD pipeline..."
             # ------------------------------
-            # 3.1 Trivy Filesystem Scan
+            # 4.1 Trivy Filesystem Scan
             # ------------------------------
             trivy fs --format json --output reports/trivy-fs.json app/
 
             # ------------------------------
-            # 3.2 SonarQube Analysis
+            # 4.2 SonarQube Analysis
             # ------------------------------
             sonar-scanner \
               -Dsonar.projectKey=app \
@@ -72,7 +78,7 @@ jobs:
               -Dsonar.login=$SONAR_TOKEN
               
             # ------------------------------
-            # 3.3 SonarQube Quality Gate Check + Save JSON
+            # 4.3 SonarQube Quality Gate Check + Save JSON
             # ------------------------------
             curl -s -u $SONAR_TOKEN: "https://sonarqube.example.com/api/qualitygates/project_status?projectKey=app" \
               -o reports/sonarqube.json
@@ -83,13 +89,13 @@ jobs:
             fi
             
             # ------------------------------
-            # 3.4 OWASP Dependency Check
+            # 4.4 OWASP Dependency Check
             # ------------------------------
             dependency-check.sh --scan ./app --disableYarnAudit --disableNodeAudit \
               --format XML --out reports/dependency-check.xml
               
             # ------------------------------
-            # 3.5 Docker Build & Push
+            # 4.5 Docker Build & Push
             # ------------------------------
             docker build -t hello:latest ./app
             docker tag hello:latest us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
@@ -98,14 +104,14 @@ jobs:
             docker push us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:latest
             
             # ------------------------------
-            # 3.6 Trivy Docker Image Scan
+            # 4.6 Trivy Docker Image Scan
             # ------------------------------
             trivy image --format json \
               --output reports/trivy-image.json \
               us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
               
             # ------------------------------
-            # 3.7 Update Helm Chart
+            # 4.7 Update Helm Chart
             # ------------------------------
             sed -i "s|image:.*|image: us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG|" helm/values.yaml
             git config user.email "bikram23march@gmail.com"
@@ -115,7 +121,7 @@ jobs:
             git push https://x-access-token:$GITHUB_TOKEN@github.com/bikram-singh/DevSecOps-Project-GCP-Jenkins-Terraform-Argocd-Helm-GKE-Ingress-SSL-TLS-Webhook.git main
 
             # ------------------------------
-            # 3.8 Generate HTML Summary Report
+            # 4.8 Generate HTML Summary Report
             # ------------------------------
             echo "<html><head><title>CI/CD Summary</title></head><body>" > reports/summary.html
             echo "<h1>✅ CI/CD Pipeline Report</h1>" >> reports/summary.html
@@ -164,9 +170,9 @@ jobs:
           fi
 
       # ------------------------------
-      # Step 4: Upload Reports
+      # Step 5: Upload Reports
       # ------------------------------
-      - name: 4️⃣ Upload Reports
+      - name: 5️⃣ Upload Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -174,9 +180,9 @@ jobs:
           path: reports/
 
       # ------------------------------
-      # Step 5: Attach HTML Summary to GitHub Job
+      # Step 6: Attach HTML Summary to GitHub Job
       # ------------------------------
-      - name: 5️⃣ Publish HTML Summary
+      - name: 6️⃣ Publish HTML Summary
         if: always()
         run: |
           echo "### 📝 CI/CD Security Summary" >> $GITHUB_STEP_SUMMARY
