--- a/.github/workflows/ci-infra.yml
+++ b/.github/workflows/ci-infra.yml
@@ -75,7 +75,7 @@ jobs:
             # ------------------------------
             docker run --rm \
               -v $(pwd):/usr/src \
-              -e SONAR_HOST_URL="http://http://104.155.137.48:9000/" \
+              -e SONAR_HOST_URL="http://104.155.137.48:9000/" \
               -e SONAR_LOGIN="$SONAR_TOKEN" \
               sonarsource/sonar-scanner-cli:latest \
               -Dsonar.projectKey=app \
