--- a/.github/workflows/ci-infra.yml
+++ b/.github/workflows/ci-infra.yml
@@ -77,7 +77,6 @@ jobs:
             PROJECT_NAME="My App"
             SONAR_HOST="http://104.155.137.48:9000"
 
-            # Ensure project exists in SonarQube
             STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
               -u "${SONAR_TOKEN}:" \
               "$SONAR_HOST/api/projects/search?projects=$PROJECT_KEY")
@@ -94,9 +93,8 @@ jobs:
               echo "✅ Project $PROJECT_KEY already exists"
             fi
 
-            # Ensure Quality Gate is assigned
             QGATE=$(curl -s -u "${SONAR_TOKEN}:" \
-              "$SONAR_HOST/api/qualitygates/get_by_project?project=$PROJECT_KEY" | jq -r '.qualityGate.name // "NONE"')
+              "$SONAR_HOST/api/qualitygates/get_by_project?projectKey=$PROJECT_KEY" | jq -r '.qualityGate.name // "NONE"')
 
             if [ "$QGATE" = "NONE" ]; then
               echo "📌 No Quality Gate assigned. Assigning default..."
@@ -114,9 +112,6 @@ jobs:
               echo "✅ Quality Gate already assigned: $QGATE"
             fi
 
-            # ------------------------------
-            # Run SonarQube Scan
-            # ------------------------------
             docker run --rm \
               -v $PWD:/usr/src \
               -e SONAR_HOST_URL="$SONAR_HOST" \
@@ -125,16 +120,11 @@ jobs:
               -Dsonar.projectKey=$PROJECT_KEY \
               -Dsonar.sources=/usr/src/app
 
-            # ------------------------------
-            # 4.3 SonarQube Quality Gate check
-            # ------------------------------
             echo "⏳ Waiting for Quality Gate status..."
-
             for i in {1..30}; do
               STATUS=$(curl -s -u "${SONAR_TOKEN}:" \
                 "http://104.155.137.48:9000/api/qualitygates/project_status?projectKey=app" \
                 | jq -r '.projectStatus.status')
-
               if [ "$STATUS" = "OK" ]; then
                 echo "✅ Quality Gate passed"
                 break
@@ -148,13 +138,12 @@ jobs:
             done
 
             # ------------------------------
-            # 4.4 OWASP Dependency Check - Commenting now i will uncomment it later
+            # 4.4 OWASP Dependency Check (commented)
             # ------------------------------
-        
             #docker run --rm -v $PWD:/src owasp/dependency-check:latest \
             #  --scan /src/app --disableYarnAudit --disableNodeAudit \
             #  --format XML --out /src/reports/dependency-check.xml
-  
+
             # ------------------------------
             # 4.5 Docker Build & Push
             # ------------------------------
@@ -172,14 +161,16 @@ jobs:
               us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
 
             # ------------------------------
-            # 4.7 Update Helm Chart
+            # 4.7 Update Helm Chart & Push with PAT
             # ------------------------------
             sed -i "s|image:.*|image: us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG|" helm/values.yaml
-            git config user.email "bikram23march@gmail.com"
-            git config user.name "bikram-singh"
+
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+
             git add helm/values.yaml
-            git commit -m "Update image to $IMAGE_TAG" || echo "No changes to commit"
-            git push https://$PAT_TOKEN@github.com/bikram-singh/DevSecOps-Project-GCP-Jenkins-Terraform-Argocd-Helm-GKE-Ingress-SSL-TLS-Webhook.git main
+            git diff --staged --quiet || git commit -m "Update image to $IMAGE_TAG"
+            git push https://$PAT_TOKEN@github.com/${{ github.repository }}.git main
 
             # ------------------------------
             # 4.8 Generate HTML Summary Report
@@ -187,23 +178,12 @@ jobs:
             echo "<html><head><title>CI/CD Summary</title></head><body>" > reports/summary.html
             echo "<h1>✅ CI/CD Pipeline Report</h1>" >> reports/summary.html
 
-            # SonarQube Result
-            echo "<h2>SonarQube Quality Gate</h2>" >> reports/summary.html
-            if [[ "$SONAR_STATUS" == "OK" ]]; then
-              echo "<p style='color:green'>✅ PASSED</p>" >> reports/summary.html
-            else
-              echo "<p style='color:red'>❌ FAILED ($SONAR_STATUS)</p>" >> reports/summary.html
-            fi
-
-            # Trivy FS
             TRIVY_FS_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-fs.json | wc -l || true)
             echo "<h2>Trivy Filesystem Scan</h2><p>Critical Issues: $TRIVY_FS_CRIT</p>" >> reports/summary.html
 
-            # Trivy Image
             TRIVY_IMG_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-image.json | wc -l || true)
             echo "<h2>Trivy Docker Image Scan</h2><p>Critical Issues: $TRIVY_IMG_CRIT</p>" >> reports/summary.html
 
-            # OWASP
             OWASP_CRIT=$(grep -c "CRITICAL" reports/dependency-check.xml || true)
             echo "<h2>OWASP Dependency Check</h2><p>Critical Issues: $OWASP_CRIT</p>" >> reports/summary.html
 
