--- a/.github/workflows/ci-infra.yml
+++ b/.github/workflows/ci-infra.yml
@@ -55,154 +55,158 @@ jobs:
           gcloud auth configure-docker us-central1-docker.pkg.dev  
 
       # ------------------------------
-      # Step 4: Conditional Pipeline
+      # Step 4: Conditional Pipeline (CI/CD)
       # ------------------------------
-      - name: 4️⃣ Run CI/CD or Infra Pipeline
+      - name: 4️⃣ Run CI/CD Pipeline
+        if: ${{ github.event.inputs.PIPELINE == 'ci' }}
         shell: bash
         run: |
           mkdir -p reports
+          echo "Running Application CI/CD pipeline..."
 
-          if [[ "${{ github.event.inputs.PIPELINE }}" == "ci" ]]; then
-            echo "Running Application CI/CD pipeline..."
+          # ------------------------------
+          # 4.1 Trivy Filesystem Scan
+          # ------------------------------
+          trivy fs --format json --output reports/trivy-fs.json app/
 
-            # ------------------------------
-            # 4.1 Trivy Filesystem Scan
-            # ------------------------------
-            trivy fs --format json --output reports/trivy-fs.json app/
+          # ------------------------------
+          # 4.2 SonarQube Project Ensure + Analysis
+          # ------------------------------
+          PROJECT_KEY="app"
+          PROJECT_NAME="My App"
+          SONAR_HOST="http://104.155.137.48:9000"
 
-            # ------------------------------
-            # 4.2 SonarQube Project Ensure + Analysis
-            # ------------------------------
-            PROJECT_KEY="app"
-            PROJECT_NAME="My App"
-            SONAR_HOST="http://104.155.137.48:9000"
+          STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
+            -u "${SONAR_TOKEN}:" \
+            "$SONAR_HOST/api/projects/search?projects=$PROJECT_KEY")
 
-            STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
+          if [ "$STATUS" -ne 200 ]; then
+            echo "📌 Project $PROJECT_KEY not found, creating..."
+            curl -s -X POST \
               -u "${SONAR_TOKEN}:" \
-              "$SONAR_HOST/api/projects/search?projects=$PROJECT_KEY")
-
-            if [ "$STATUS" -ne 200 ]; then
-              echo "📌 Project $PROJECT_KEY not found, creating..."
-              curl -s -X POST \
-                -u "${SONAR_TOKEN}:" \
-                "$SONAR_HOST/api/projects/create" \
-                -d "name=$PROJECT_NAME" \
-                -d "project=$PROJECT_KEY"
-              echo "✅ Project created"
-            else
-              echo "✅ Project $PROJECT_KEY already exists"
-            fi
-
-            QGATE=$(curl -s -u "${SONAR_TOKEN}:" \
-              "$SONAR_HOST/api/qualitygates/get_by_project?projectKey=$PROJECT_KEY" | jq -r '.qualityGate.name // "NONE"')
-
-            if [ "$QGATE" = "NONE" ]; then
-              echo "📌 No Quality Gate assigned. Assigning default..."
-              DEFAULT_QGATE=$(curl -s -u "${SONAR_TOKEN}:" \
-                "$SONAR_HOST/api/qualitygates/list" | jq -r '.qualitygates[] | select(.isDefault==true) | .id')
-              if [ -n "$DEFAULT_QGATE" ]; then
-                curl -s -u "${SONAR_TOKEN}:" \
-                  -X POST "$SONAR_HOST/api/qualitygates/select" \
-                  -d "projectKey=$PROJECT_KEY" -d "gateId=$DEFAULT_QGATE"
-                echo "✅ Default Quality Gate assigned"
-              else
-                echo "⚠️ No default Quality Gate found in SonarQube"
-              fi
-            else
-              echo "✅ Quality Gate already assigned: $QGATE"
-            fi
-
-            docker run --rm \
-              -v $PWD:/usr/src \
-              -e SONAR_HOST_URL="$SONAR_HOST" \
-              -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" \
-              sonarsource/sonar-scanner-cli:latest \
-              -Dsonar.projectKey=$PROJECT_KEY \
-              -Dsonar.sources=/usr/src/app
-
-            echo "⏳ Waiting for Quality Gate status..."
-            for i in {1..30}; do
-              STATUS=$(curl -s -u "${SONAR_TOKEN}:" \
-                "http://104.155.137.48:9000/api/qualitygates/project_status?projectKey=app" \
-                | jq -r '.projectStatus.status')
-              if [ "$STATUS" = "OK" ]; then
-                echo "✅ Quality Gate passed"
-                break
-              elif [ "$STATUS" = "ERROR" ]; then
-                echo "❌ Quality Gate failed"
-                exit 1
-              else
-                echo "⌛ Status: $STATUS (retry $i/30)"
-                sleep 5
-              fi
-            done
-
-            # ------------------------------
-            # 4.4 OWASP Dependency Check (commented)
-            # ------------------------------
-            #docker run --rm -v $PWD:/src owasp/dependency-check:latest \
-            #  --scan /src/app --disableYarnAudit --disableNodeAudit \
-            #  --format XML --out /src/reports/dependency-check.xml
-
-            # ------------------------------
-            # 4.5 Docker Build & Push
-            # ------------------------------
-            docker build -t hello:latest ./app
-            docker tag hello:latest us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
-            docker tag hello:latest us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:latest
-            docker push us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
-            docker push us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:latest
-
-            # ------------------------------
-            # 4.6 Trivy Docker Image Scan
-            # ------------------------------
-            trivy image --format json \
-              --output reports/trivy-image.json \
-              us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
-
-            # ------------------------------
-            # 4.7 Update Helm Chart & Push with PAT
-            # ------------------------------
-            sed -i "s|image:.*|image: us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG|" helm/values.yaml
-
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-
-            git add helm/values.yaml
-            git diff --staged --quiet || git commit -m "Update image to $IMAGE_TAG"
-            git push https://$PAT_TOKEN@github.com/${{ github.repository }}.git main
-
-            # ------------------------------
-            # 4.8 Generate HTML Summary Report
-            # ------------------------------
-            echo "<html><head><title>CI/CD Summary</title></head><body>" > reports/summary.html
-            echo "<h1>✅ CI/CD Pipeline Report</h1>" >> reports/summary.html
-
-            TRIVY_FS_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-fs.json | wc -l || true)
-            echo "<h2>Trivy Filesystem Scan</h2><p>Critical Issues: $TRIVY_FS_CRIT</p>" >> reports/summary.html
-
-            TRIVY_IMG_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-image.json | wc -l || true)
-            echo "<h2>Trivy Docker Image Scan</h2><p>Critical Issues: $TRIVY_IMG_CRIT</p>" >> reports/summary.html
-
-            OWASP_CRIT=$(grep -c "CRITICAL" reports/dependency-check.xml || true)
-            echo "<h2>OWASP Dependency Check</h2><p>Critical Issues: $OWASP_CRIT</p>" >> reports/summary.html
-
-            echo "</body></html>" >> reports/summary.html
-
-            echo "✅ CI/CD pipeline completed successfully."
-
+              "$SONAR_HOST/api/projects/create" \
+              -d "name=$PROJECT_NAME" \
+              -d "project=$PROJECT_KEY"
+            echo "✅ Project created"
           else
-            echo "Running Infrastructure Pipeline..."
-            cd gke-terraform
-            terraform init
-            if [[ "${{ github.event.inputs.ACTION }}" == "apply" ]]; then
-              terraform plan
-              terraform apply -auto-approve
-            else
-              terraform destroy -auto-approve
-            fi
-            echo "✅ Infra pipeline completed successfully."
+            echo "✅ Project $PROJECT_KEY already exists"
           fi
+
+          QGATE=$(curl -s -u "${SONAR_TOKEN}:" \
+            "$SONAR_HOST/api/qualitygates/get_by_project?projectKey=$PROJECT_KEY" | jq -r '.qualityGate.name // "NONE"')
+
+          if [ "$QGATE" = "NONE" ]; then
+            echo "📌 No Quality Gate assigned. Assigning default..."
+            DEFAULT_QGATE=$(curl -s -u "${SONAR_TOKEN}:" \
+              "$SONAR_HOST/api/qualitygates/list" | jq -r '.qualitygates[] | select(.isDefault==true) | .id')
+            if [ -n "$DEFAULT_QGATE" ]; then
+              curl -s -u "${SONAR_TOKEN}:" \
+                -X POST "$SONAR_HOST/api/qualitygates/select" \
+                -d "projectKey=$PROJECT_KEY" -d "gateId=$DEFAULT_QGATE"
+              echo "✅ Default Quality Gate assigned"
+            else
+              echo "⚠️ No default Quality Gate found in SonarQube"
+            fi
+          else
+            echo "✅ Quality Gate already assigned: $QGATE"
+          fi
+
+          docker run --rm \
+            -v $PWD:/usr/src \
+            -e SONAR_HOST_URL="$SONAR_HOST" \
+            -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" \
+            sonarsource/sonar-scanner-cli:latest \
+            -Dsonar.projectKey=$PROJECT_KEY \
+            -Dsonar.sources=/usr/src/app
+
+          echo "⏳ Waiting for Quality Gate status..."
+          for i in {1..30}; do
+            STATUS=$(curl -s -u "${SONAR_TOKEN}:" \
+              "http://104.155.137.48:9000/api/qualitygates/project_status?projectKey=app" \
+              | jq -r '.projectStatus.status')
+            if [ "$STATUS" = "OK" ]; then
+              echo "✅ Quality Gate passed"
+              break
+            elif [ "$STATUS" = "ERROR" ]; then
+              echo "❌ Quality Gate failed"
+              exit 1
+            else
+              echo "⌛ Status: $STATUS (retry $i/30)"
+              sleep 5
+            fi
+          done
+
+          # ------------------------------
+          # 4.4 OWASP Dependency Check (commented)
+          # ------------------------------
+          #docker run --rm -v $PWD:/src owasp/dependency-check:latest \
+          #  --scan /src/app --disableYarnAudit --disableNodeAudit \
+          #  --format XML --out /src/reports/dependency-check.xml
+
+          # ------------------------------
+          # 4.5 Docker Build & Push
+          # ------------------------------
+          docker build -t hello:latest ./app
+          docker tag hello:latest us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
+          docker tag hello:latest us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:latest
+          docker push us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
+          docker push us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:latest
+
+          # ------------------------------
+          # 4.6 Trivy Docker Image Scan
+          # ------------------------------
+          trivy image --format json \
+            --output reports/trivy-image.json \
+            us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG
+
+          # ------------------------------
+          # 4.7 Update Helm Chart & Push with PAT
+          # ------------------------------
+          sed -i "s|image:.*|image: us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/docker-repo/hello:$IMAGE_TAG|" helm/values.yaml
+
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add helm/values.yaml
+          git diff --staged --quiet || git commit -m "Update image to $IMAGE_TAG"
+          git push https://$PAT_TOKEN@github.com/${{ github.repository }}.git main
+
+          # ------------------------------
+          # 4.8 Generate HTML Summary Report
+          # ------------------------------
+          echo "<html><head><title>CI/CD Summary</title></head><body>" > reports/summary.html
+          echo "<h1>✅ CI/CD Pipeline Report</h1>" >> reports/summary.html
+
+          TRIVY_FS_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-fs.json | wc -l || true)
+          echo "<h2>Trivy Filesystem Scan</h2><p>Critical Issues: $TRIVY_FS_CRIT</p>" >> reports/summary.html
+
+          TRIVY_IMG_CRIT=$(jq '.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")' reports/trivy-image.json | wc -l || true)
+          echo "<h2>Trivy Docker Image Scan</h2><p>Critical Issues: $TRIVY_IMG_CRIT</p>" >> reports/summary.html
+
+          OWASP_CRIT=$(grep -c "CRITICAL" reports/dependency-check.xml || true)
+          echo "<h2>OWASP Dependency Check</h2><p>Critical Issues: $OWASP_CRIT</p>" >> reports/summary.html
+
+          echo "</body></html>" >> reports/summary.html
+
+          echo "✅ CI/CD pipeline completed successfully."
+
+      # ------------------------------
+      # Step 4.9: Run Infrastructure Pipeline (Separate from CI/CD)
+      # ------------------------------
+      - name: 4.9 Run Infrastructure Pipeline
+        if: ${{ github.event.inputs.PIPELINE == 'infra' }}
+        shell: bash
+        run: |
+          echo "Running Infrastructure Pipeline..."
+          cd gke-terraform
+          terraform init
+          if [[ "${{ github.event.inputs.ACTION }}" == "apply" ]]; then
+            terraform plan
+            terraform apply -auto-approve
+          else
+            terraform destroy -auto-approve
+          fi
+          echo "✅ Infra pipeline completed successfully."
 
       # ------------------------------
       # Step 5: Upload Reports
@@ -229,4 +233,3 @@ jobs:
           else
             echo "⚠️ reports/summary.html not found, skipping append."
           fi
-
